cabal-version: 3.0
name:          haskemathesis
version:       0.1.0.0
license:
author:        Luke
maintainer:    luke@weyl.ai
build-type:    Simple

common warnings
  ghc-options: -Wall -Werror

library
  import:           warnings
  exposed-modules:
    Haskemathesis.Auth.Config
    Haskemathesis.Check.Standard
    Haskemathesis.Check.Types
    Haskemathesis.Config
    Haskemathesis.Execute.Http
    Haskemathesis.Execute.Types
    Haskemathesis.Execute.Wai
    Haskemathesis.Gen
    Haskemathesis.Gen.Core
    Haskemathesis.Gen.Format
    Haskemathesis.Gen.Primitive
    Haskemathesis.Gen.Request
    Haskemathesis.Integration.Hspec
    Haskemathesis.Integration.Tasty
    Haskemathesis.OpenApi.Convert
    Haskemathesis.OpenApi.Loader
    Haskemathesis.OpenApi.Resolve
    Haskemathesis.OpenApi.Types
    Haskemathesis.Property
    Haskemathesis.Report.Curl
    Haskemathesis.Report.Render
    Haskemathesis.Schema
    Haskemathesis.Validate

  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , case-insensitive
    , containers
    , hedgehog
    , hspec
    , hspec-hedgehog
    , http-client
    , http-media
    , http-types
    , insert-ordered-containers
    , openapi3
    , regex-tdfa
    , scientific
    , tasty
    , tasty-hedgehog
    , text
    , time
    , vector
    , wai
    , wai-extra
    , yaml

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite haskemathesis-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:
    Haskemathesis.Test.Generators
    Haskemathesis.Test.Properties.Auth
    Haskemathesis.Test.Properties.Config
    Haskemathesis.Test.Properties.ContentType
    Haskemathesis.Test.Properties.Curl
    Haskemathesis.Test.Properties.Gen
    Haskemathesis.Test.Properties.Render
    Haskemathesis.Test.Properties.Request
    Haskemathesis.Test.Properties.ResponseHeaders
    Haskemathesis.Test.Properties.ResponseSchema
    Haskemathesis.Test.Properties.StatusCode
    Haskemathesis.Test.Properties.Validate
    Haskemathesis.Test.Spec
    Haskemathesis.Test.Support

  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , case-insensitive
    , containers
    , haskemathesis
    , hedgehog
    , hspec
    , http-types
    , insert-ordered-containers
    , openapi3
    , regex-tdfa
    , scientific
    , text
    , vector

  default-language: Haskell2010

executable haskemathesis-hspec-example
  import:           warnings
  main-is:          HspecExample.hs
  hs-source-dirs:   examples
  build-depends:
    , base
    , bytestring
    , haskemathesis
    , hspec
    , http-types
    , wai

  default-language: Haskell2010

executable haskemathesis-tasty-example
  import:           warnings
  main-is:          TastyExample.hs
  hs-source-dirs:   examples
  build-depends:
    , base
    , bytestring
    , haskemathesis
    , http-types
    , tasty
    , wai

  default-language: Haskell2010
