cabal-version: 3.0
name:          haskemathesis
version:       0.1.0.0
license:
author:        Luke
maintainer:    luke@weyl.ai
description:   OpenAPI 3.0 Property-Based Testing
build-type:    Simple

common warnings
  ghc-options: -Wall -Werror

library
  import:           warnings
  exposed-modules:
    Haskemathesis
    Haskemathesis.Auth.Config
    Haskemathesis.Check.Negative
    Haskemathesis.Check.Standard
    Haskemathesis.Check.Standard.Helpers
    Haskemathesis.Check.Standard.ResponseTime
    Haskemathesis.Check.Types
    Haskemathesis.CLI
    Haskemathesis.CLI.Internal
    Haskemathesis.CLI.Options
    Haskemathesis.CLI.Runner
    Haskemathesis.Config
    Haskemathesis.Execute.Http
    Haskemathesis.Execute.Types
    Haskemathesis.Execute.Wai
    Haskemathesis.Gen
    Haskemathesis.Gen.Core
    Haskemathesis.Gen.Format
    Haskemathesis.Gen.Negative
    Haskemathesis.Gen.Primitive
    Haskemathesis.Gen.Request
    Haskemathesis.Integration.Hspec
    Haskemathesis.Integration.Tasty
    Haskemathesis.OpenApi.Convert
    Haskemathesis.OpenApi.Loader
    Haskemathesis.OpenApi.Resolve
    Haskemathesis.OpenApi.Types
    Haskemathesis.Property
    Haskemathesis.Report.Curl
    Haskemathesis.Report.JUnit
    Haskemathesis.Report.Render
    Haskemathesis.Schema
    Haskemathesis.Validate

  other-modules:
    Haskemathesis.Check.Standard.ContentType
    Haskemathesis.Check.Standard.Headers
    Haskemathesis.Check.Standard.ResponseSchema
    Haskemathesis.Check.Standard.Status
    Haskemathesis.Gen.Negative.Mutations
    Haskemathesis.Gen.Negative.Types

  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring                 >=0.11 && <0.13
    , case-insensitive
    , containers
    , directory
    , hedgehog
    , hspec                      >=2.8  && <3
    , hspec-hedgehog
    , http-client
    , http-client-tls
    , http-media
    , http-types                 >=0.12 && <0.13
    , insert-ordered-containers
    , openapi3                   >=3.2  && <3.3
    , optparse-applicative       >=0.18 && <0.19
    , regex-tdfa
    , scientific
    , tasty
    , tasty-hedgehog
    , temporary
    , text
    , time
    , vector
    , wai                        >=3.2  && <4
    , wai-extra
    , yaml

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite haskemathesis-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:
    Haskemathesis.Test.Generators
    Haskemathesis.Test.Properties.Auth
    Haskemathesis.Test.Properties.CLI
    Haskemathesis.Test.Properties.CLIInternal
    Haskemathesis.Test.Properties.Config
    Haskemathesis.Test.Properties.ContentType
    Haskemathesis.Test.Properties.Convert
    Haskemathesis.Test.Properties.Curl
    Haskemathesis.Test.Properties.Format
    Haskemathesis.Test.Properties.Gen
    Haskemathesis.Test.Properties.Helpers
    Haskemathesis.Test.Properties.JUnit
    Haskemathesis.Test.Properties.Loader
    Haskemathesis.Test.Properties.Negative
    Haskemathesis.Test.Properties.Negative.Checks
    Haskemathesis.Test.Properties.Negative.Generation
    Haskemathesis.Test.Properties.Negative.Mutations
    Haskemathesis.Test.Properties.Primitive
    Haskemathesis.Test.Properties.Render
    Haskemathesis.Test.Properties.Request
    Haskemathesis.Test.Properties.Resolve
    Haskemathesis.Test.Properties.ResponseHeaders
    Haskemathesis.Test.Properties.ResponseSchema
    Haskemathesis.Test.Properties.ResponseTime
    Haskemathesis.Test.Properties.StatusCode
    Haskemathesis.Test.Properties.Streaming
    Haskemathesis.Test.Properties.Timeout
    Haskemathesis.Test.Properties.Validate
    Haskemathesis.Test.Properties.Wai
    Haskemathesis.Test.Spec
    Haskemathesis.Test.Support

  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , case-insensitive
    , containers
    , haskemathesis
    , hedgehog
    , hspec
    , hspec-hedgehog
    , http-types
    , insert-ordered-containers
    , openapi3
    , optparse-applicative
    , regex-tdfa
    , scientific
    , text
    , vector
    , wai

  default-language: Haskell2010

executable haskemathesis-hspec-example
  import:           warnings
  main-is:          HspecExample.hs
  hs-source-dirs:   examples
  build-depends:
    , base
    , bytestring     >=0.11 && <0.13
    , haskemathesis
    , hspec          >=2.8  && <3
    , http-types     >=0.12 && <0.13
    , time
    , wai            >=3.2  && <4

  default-language: Haskell2010

executable haskemathesis-hspec-negative-example
  import:           warnings
  main-is:          HspecNegativeExample.hs
  hs-source-dirs:   examples
  build-depends:
    , base
    , bytestring     >=0.11 && <0.13
    , haskemathesis
    , hspec          >=2.8  && <3
    , http-types     >=0.12 && <0.13
    , openapi3       >=3.2  && <3.3
    , wai            >=3.2  && <4

  default-language: Haskell2010

executable haskemathesis-tasty-example
  import:           warnings
  main-is:          TastyExample.hs
  hs-source-dirs:   examples
  build-depends:
    , base
    , bytestring
    , haskemathesis
    , http-types
    , tasty
    , wai

  default-language: Haskell2010

executable haskemathesis-cli
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base
    , bytestring
    , haskemathesis
    , hedgehog
    , http-client
    , http-client-tls
    , http-types
    , openapi3
    , optparse-applicative
    , text
    , transformers

  default-language: Haskell2010
